[NI] Add reachability metadata generation tests for native image
* Add tests for generating reachability metadata (smoke + full)
* Add smoke tests for the native image
* Update Readme
* Add IDE run configurations

^KT-86670 Fixed